Update package.json for angular 17

--- a/src/package.json
+++ b/src/package.json
@@ -19,9 +19,9 @@
   "module": "ngx-slick.js",
   "typings": "ngx-slick.d.ts",
   "peerDependencies": {
-    "@angular/core": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0",
-    "@angular/common": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0",
-    "@angular/forms": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0",
+    "@angular/core": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
+    "@angular/common": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
+    "@angular/forms": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
     "rxjs": "^6.0.0 || ^7.0.0",
     "zone.js": ">=0.10.2"
   }
